--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Document</title>
 </head>
 <body>
+  
+<div class="banner">
+ <h1>Kayden's Farm</h1>
+ <h5>My Virtual Farm</h5>
+</div>  
+ 
   
 </body>
 </html>
